# memgraph-academy

./: pyproject.toml
gapd-2022/1-networkX-basics/1-graph-creation/: data-import-gml.py
gapd-2022/1-networkX-basics/2-graph-algorithms/: dijkstra.py
