[tool.poetry]
name = "memgraph-academy"
version = "0.1.0"
description = ""
authors = ["Luis Arias <luis@inclusif.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
